--- a/client/index.html
+++ b/client/index.html
@@ -61,13 +61,14 @@
   <!-- inject:js -->
   <script src="app/app.js"></script>
   <script src="app/home/home.module.js"></script>
+  <script src="app/appointment/appointment.controller.js"></script>
   <script src="app/home/home.controller.js"></script>
   <script src="app/home/home.route.js"></script>
   <script src="app/login/getLogin.controller.js"></script>
-  <script src="app/appointment/appointment.controller.js"></script>
   <script src="app/previousAppointments/previous.controller.js"></script>
   <script src="app/register/register.controller.js"></script>
   <script src="app/update/update.controller.js"></script>
+  <script src="app/welcome/welcome.controller.js"></script>
   <!-- endinject -->
   <!-- endbuild -->
   
