check date in appointments.. working on previous appointment

--- a/client/app/previousAppointments/previous.html
+++ b/client/app/previousAppointments/previous.html
@@ -1,3 +1,4 @@
+<div ng-init="data.getData()">
 <header data-ng-include="'templates/loginHeader.html'"></header>
 <table class="table table-hover">
         <thead>
@@ -25,3 +26,4 @@
         
         </tbody>
     </table>
+</div>
