--- a/client/app/home/home.html
+++ b/client/app/home/home.html
@@ -1,5 +1,5 @@
-<header data-ng-include="'templates/header.html'"></header>
-<div class="row">
+<header data-ng-include="'templates/header.html'" class="navbar-fixed-top"></header>
+<div class="row shift">
   <div class="col-xs-12">
     <div class="img-main-message text-center">
   
