--- a/client/app/login/login.html
+++ b/client/app/login/login.html
@@ -1,5 +1,5 @@
 
-  <header data-ng-include="'templates/header.html'"></header>
+  <header data-ng-include="'templates/header.html'" class="navbar-fixed-top"></header>
 <div>
 
         <div id="login" class="input-group input-group shift">
