--- a/client/app/register/register.html
+++ b/client/app/register/register.html
@@ -1,4 +1,4 @@
-<header data-ng-include="'templates/header.html'"></header>
+<header data-ng-include="'templates/header.html'" class="navbar-fixed-top"></header>
 <div>
 
 
