--- a/client/app/update/update.html
+++ b/client/app/update/update.html
@@ -1,4 +1,4 @@
-<header data-ng-include="'templates/loginHeader.html'"></header>
+<header data-ng-include="'templates/loginHeader.html'" class="navbar-fixed-top"></header>
 <div id="register" class="input-group input-group shift" ng-init="vm.updateData()">
     <h2 class="text-success">Update Information</h2>
     <span >{{vm.msg}}</span>
