--- a/client/app/welcome/welcome.html
+++ b/client/app/welcome/welcome.html
@@ -1,5 +1,5 @@
-<header data-ng-include="'templates/loginHeader.html'"></header>
-
+<header data-ng-include="'templates/loginHeader.html'" class="navbar-fixed-top"></header>
+<div class="shift">
 <h1>Welcome <span id="uName"><i class="text-success">{{vm.userName}}</i></span> </h1>
 <button class="btn btn-success" ng-click="vm.showForm()">Start a discussion!</button> <br/><span>{{vm.err}}</span>
 <table class="table table-hover">
@@ -20,3 +20,4 @@
     </tbody>
    
 </table>
+</div>
