--- a/client/app/msgs/msg.html
+++ b/client/app/msgs/msg.html
@@ -1,4 +1,29 @@
 <header data-ng-include="'templates/loginHeader.html'" class="navbar-fixed-top"> </header>
 <div class="shift" ng-init='vm.getData()'>
-<h3>Replies for the Discussions :</h3>
+<h3>Discussion Details :</h3>
+
+<table  class="table table-hover"> 
+    <tr ng-repeat="(key,value) in vm.data">
+        <td>{{value.userName}}</td>
+        <td>{{value.topic}}</td>
+        <td>{{value.discussion}}</td>
+        <td>{{value.time}}</td>
+        <td><button class="btn btn-danger" ng-click="vm.delete(value.topic,value.discussion,value.time)">Delete Discussion</button></td>
+        <td>
+            <p>
+            <table class="table table-hover">
+                    <td class="text-success">Replies</td>
+                <tr ng-repeat="item in value.replies">
+                    
+                    <td>{{item.reply}}</td>
+                    <td>{{item.from}}</td>
+                    <td>{{item.time}}</td>
+                </tr>
+            </p>
+            </table>
+        </td>
+        
+    </tr>
+   
+</table>
 </div>
