--- a/client/app/reply/reply.html
+++ b/client/app/reply/reply.html
@@ -1,5 +1,7 @@
 <header data-ng-include="'templates/loginHeader.html'" class="navbar-fixed-top"></header>
+
 <div ng-init="vm.previousReplies()">
+        <div class="shift">
 <h2 class="text-success">{{vm.topic}}</h2>
 <div class="shift-right text-danger"><h4>-{{vm.userName}}</h4></div>
 <h3>Previous Replies:</h3>
@@ -22,4 +24,5 @@
 
 <button class="btn btn-success" type="submit" ng-disabled="vm.check">Create Reply</button>
 </form>
+</div>
 </div>
