--- a/client/app/login/login.html
+++ b/client/app/login/login.html
@@ -18,7 +18,7 @@
                      <td class="login-spacing"><input type="password" name="password" required minlength="4"  ng-keypress="vm.clearPassErr()" ng-model="vm.password"  ng-blur=" vm.verifyPass()" ><br/></td>
                     
                  </tr>
-                 <tr><td></td>{{vm.PassErr}}</td></tr>
+                 <tr><td></td><td>{{vm.PassErr}}</td></tr>
                
                      <td class="login-spacing"><button type="submit" class="btn btn-success">Login</button></td>
 
