validations are done

--- a/client/app/login/login.html
+++ b/client/app/login/login.html
@@ -2,7 +2,7 @@
   <header data-ng-include="'templates/header.html'" class="navbar-fixed-top"></header>
 <div>
 
-        <div id="login" class="input-group input-group shift">
+        <div  class="input-group input-group shift login">
             <h2 class="text-success">View your profile in a few steps</h2>
         <form name="login" ng-submit="vm.login(vm.regNum,vm.password)">
                 <div class="container" style="margin-top: 5%;">
