--- a/client/app/previousAppointments/previous.html
+++ b/client/app/previousAppointments/previous.html
@@ -3,7 +3,7 @@
     <div class="body-content">
       <div class="shift">
         <div>
-                <label><span class="text-success shift"><b>Search Criteria:</b></span> <input ng-model="searchText" ng-disabled="data.hide"></label>
+                <label><span class="text-success"><b>Search Criteria:</b></span> <input ng-model="searchText" ng-disabled="data.hide"></label>
         <table class="table table-hover" ng-init="data.getData()">
 
             <thead>
