--- a/client/index.html
+++ b/client/index.html
@@ -74,18 +74,37 @@
   <script src="app/app.js"></script>
   <script src="app/home/home.module.js"></script>
   <script src="app/about/about.controller.js"></script>
-  <script src="app/adminReview/review.controller.js"></script>
   <script src="app/admin/admin.controller.js"></script>
+  <script src="app/adminAppointments/appService.service.js"></script>
   <script src="app/adminAppointments/appoinmentHistory.controller.js"></script>
+  <script src="app/adminAppointments/editCtrl.controller.js"></script>
+  <script src="app/adminReview/review.controller.js"></script>
   <script src="app/appointment/appointment.controller.js"></script>
+  <script src="app/appointment/appointmentService.service.js"></script>
   <script src="app/home/home.controller.js"></script>
   <script src="app/home/home.route.js"></script>
+  <script src="app/login/authInterceptor.factory.js"></script>
   <script src="app/login/getLogin.controller.js"></script>
+  <script src="app/login/tokenFactory.factory.js"></script>
+  <script src="app/login/userService.service.js"></script>
   <script src="app/msgs/msgCtrl.controller.js"></script>
+  <script src="app/msgs/msgDelete.service.js"></script>
+  <script src="app/msgs/msgService.service.js"></script>
   <script src="app/previousAppointments/previous.controller.js"></script>
+  <script src="app/previousAppointments/previousService.service.js"></script>
   <script src="app/register/register.controller.js"></script>
-  <script src="app/reply/reply.controller.js"></script>
+  <script src="app/register/registrationService.service.js"></script>
   <script src="app/update/update.controller.js"></script>
+  <script src="app/update/updateInfo.service.js"></script>
+  <script src="app/update/updateService.service.js"></script>
+  <script src="app/reply/addReplyService.service.js"></script>
+  <script src="app/reply/reply.controller.js"></script>
+  <script src="app/reply/replyService.service.js"></script>
+  <script src="app/welcome/EmailCtrl.controller.js"></script>
+  <script src="app/welcome/FormCtrl.controller.js"></script>
+  <script src="app/welcome/dataService.service.js"></script>
+  <script src="app/welcome/discussionStartService.service.js"></script>
+  <script src="app/welcome/emailService.service.js"></script>
   <script src="app/welcome/welcome.controller.js"></script>
   <!-- endinject -->
   <!-- endbuild -->
