--- a/client/app/msgs/msg.html
+++ b/client/app/msgs/msg.html
@@ -13,7 +13,7 @@
         <th></th>
     </thead>
     <tbody>
-    <tr ng-repeat="(key,value) in vm.data| orderBy:'value.time':true">
+    <tr class="yo" ng-repeat="(key,value) in vm.data| orderBy:'value.time':true">
         
         <td>{{value.topic}}</td>
         <td>{{value.discussion}}</td>
