--- a/client/index.html
+++ b/client/index.html
@@ -64,6 +64,8 @@
   <script src="bower_components/google-maps-utility-library-v3-infobox/dist/infobox.js"></script>
   <script src="bower_components/google-maps-utility-library-v3-keydragzoom/dist/keydragzoom.js"></script>
   <script src="bower_components/js-rich-marker/src/richmarker.js"></script>
+  <script src="bower_components/angular-animate/angular-animate.js"></script>
+  <script src="bower_components/angular-file-model/angular-file-model.js"></script>
   <script src="bower_components/bootstrap-sass/assets/javascripts/bootstrap.js"></script>
   <script src="bower_components/angular-google-maps/dist/angular-google-maps.js"></script>
   <!-- endinject -->
@@ -78,7 +80,11 @@
   <script src="app/adminAppointments/appService.service.js"></script>
   <script src="app/adminAppointments/appoinmentHistory.controller.js"></script>
   <script src="app/adminAppointments/editCtrl.controller.js"></script>
+  <script src="app/adminAppointments/reviewCtrl.controller.js"></script>
+  <script src="app/adminAppointments/reviewUploadService.service.js"></script>
+  <script src="app/adminReview/registerService.service.js"></script>
   <script src="app/adminReview/review.controller.js"></script>
+  <script src="app/adminReview/reviews.directive.js"></script>
   <script src="app/appointment/appointment.controller.js"></script>
   <script src="app/appointment/appointmentService.service.js"></script>
   <script src="app/home/home.controller.js"></script>
@@ -94,15 +100,16 @@
   <script src="app/previousAppointments/previousService.service.js"></script>
   <script src="app/register/register.controller.js"></script>
   <script src="app/register/registrationService.service.js"></script>
-  <script src="app/update/update.controller.js"></script>
-  <script src="app/update/updateInfo.service.js"></script>
-  <script src="app/update/updateService.service.js"></script>
   <script src="app/reply/addReplyService.service.js"></script>
   <script src="app/reply/reply.controller.js"></script>
   <script src="app/reply/replyService.service.js"></script>
+  <script src="app/update/update.controller.js"></script>
+  <script src="app/update/updateInfo.service.js"></script>
+  <script src="app/update/updateService.service.js"></script>
   <script src="app/welcome/EmailCtrl.controller.js"></script>
   <script src="app/welcome/FormCtrl.controller.js"></script>
   <script src="app/welcome/dataService.service.js"></script>
+  <script src="app/welcome/date.provider.js"></script>
   <script src="app/welcome/discussionStartService.service.js"></script>
   <script src="app/welcome/emailService.service.js"></script>
   <script src="app/welcome/welcome.controller.js"></script>
